# apistress

./: .gitignore  CLAUDE.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
scripts/: gen_icon.py  generate-icons.mjs
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/engine/: assertion.rs  controller.rs  mod.rs  plan.rs  result.rs  runner.rs  sampler.rs  thread_group.rs  timer.rs
src/assets/: main.css
src/components/classic/: ClassicLayout.vue  ContextMenu.vue  LiveDashboard.vue  PropertiesPanel.vue  ResultsPanel.vue  TreeNodeChildren.vue  TreeView.vue
src/components/classic/properties/: ElementEditors.vue  PlanEditor.vue  SamplerEditors.vue
src/components/editors/: CodeMirrorEditor.vue  MonacoJsonEditor.vue
src/components/layout/: AppShell.vue  ExecutionBar.vue  MainLayout.vue  StatusBar.vue  ToolBar.vue
src/components/modern/: ModernLayout.vue  RequestEditor.vue  RequestList.vue  ResponsePanel.vue
src/composables/: useChartOptions.ts  useFileIO.ts  useKeyboardShortcuts.ts  usePanelResize.ts
src/stores/: executionStore.ts  index.ts  testPlanStore.ts  uiStore.ts
src/types/: assertion.ts  common.ts  config.ts  controller.ts  index.ts  listener.ts  processor.ts  sampler.ts  testplan.ts  timer.ts
src/utils/: jmx.ts  time.ts  tree-utils.ts
(+11 files in other folders)
