[package]
name = "apistress"
version = "0.4.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "apistress_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2.4.3"
tauri-plugin-fs = "2.5.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart", "http2"] }
tokio = { version = "1", features = ["sync", "time", "rt", "net"] }
rumqttc = "0.24"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
redis = { version = "0.27", features = ["tokio-comp", "aio"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
rand = "0.8"
tauri-plugin-dialog = "2.7.1"
regex = "1"
csv = "1"
percent-encoding = "2"
base64 = "0.22"
tauri-plugin-http = "2.5.9"
tauri-plugin-notification = "2.3.3"
tauri-plugin-window-state = "2.4.1"

